Fix NPE on variant player objective